# kaos-compliance

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  NOTICE  README.md  SECURITY.md  diary.html  governance.html  heartbeat.json  index.html  license-policy.html  methodology.html  pyproject.toml  security.html  supply-chain.html
.github/: CODEOWNERS
.github/workflows/: build.yml  ci.yml  quality.yml  security-light.yml  security.yml  sweep.yml  test.yml
api/v1/: history.json  index.html  snapshot.json  snapshot.schema.json  snapshot.sig  snapshot.sig.meta.json
api/v1/history/: 2026-05-11.json  2026-05-12.json  2026-05-13.json  2026-05-14.json  (+6 more)
assets/: dashboard.css
collector/: __init__.py  _retry.py  code_metrics.py  diary.py  governance.py  history.py  policy.py  pypi.py  sbom.py  schema.py  snapshot.py  supply_chain.py  suppressions.py
data/sbom/: kaos-citations-0.1.0a2.cdx.json  kaos-content-0.1.0a6.cdx.json  kaos-core-0.1.0a5.cdx.json  kaos-graph-0.1.0a3.cdx.json  kaos-llm-client-0.1.0a3.cdx.json  kaos-llm-core-0.1.0a5.cdx.json  kaos-mcp-0.1.0a3.cdx.json  kaos-names-0.1.0a1.cdx.json  kaos-nlp-core-0.1.0a3.cdx.json  kaos-nlp-transformers-0.2.0a4.cdx.json  kaos-pdf-0.1.0a2.cdx.json  kaos-source-0.1.0a3.cdx.json  sample-kaos-core.cdx.json
docs/: DATA-MODEL.md  EVIDENCE.md  LICENSE-AUDIT.md  METHODOLOGY.md  RUNBOOK.md
docs/research/: 01-compliance-signal-inventory.md  02-pypi-extraction-findings.md  03-sbom-design.md  04-information-architecture.md  05-style-guide.md  06-dashboard-credibility-review.md  07-process-audit.md  08-followup.md
package/: kaos-agents.html  kaos-citations.html  kaos-compliance.html  kaos-content.html  kaos-core.html  kaos-graph.html  kaos-llm-client.html  kaos-llm-core.html  kaos-mcp.html  kaos-ml-core.html  kaos-names.html  kaos-nlp-core.html  kaos-nlp-transformers.html  kaos-office.html  kaos-pdf.html  kaos-source.html  kaos-tabular.html  kaos-ui.html  kaos-web.html
policy/: license-allowlist.yaml
render/: __init__.py  __main__.py
render/templates/: api-index.html.jinja  diary.html.jinja  governance.html.jinja  index.html.jinja  license-policy.html.jinja  methodology.html.jinja  package.html.jinja  security.html.jinja  supply-chain.html.jinja
scripts/: install-cron.sh  local-cron.sh
scripts/_ci/: sign-snapshot.sh  tag-heartbeat.sh
tests/: test_diary.py  test_governance.py  test_history.py  test_render_integrity.py  test_render_p7.py  test_sbom_license_metadata.py  test_schema.py  test_sign_snapshot.py  test_supply_chain.py  test_supply_chain_view.py
(+122 files in other folders)
